--- a/Source/Xicht/Properties/Resources.resx
+++ b/Source/Xicht/Properties/Resources.resx
@@ -127,11 +127,14 @@
   <data name="Xicht_about" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Icon\Xicht_about.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Xicht_tray" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Icon\Xicht_tray.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Xicht" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Icon\Xicht.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="Xicht_tray" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Icon\Xicht_tray.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="faces_reinchard" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\About\faces_reinchard.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
